--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -2,10 +2,10 @@
   <div class="form-group">
     <div class="col-md-offset-3  col-md-9">
       <label class="radio-inline">
-        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Regular Expression
+        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="false">Regular Expression
       </label>
       <label class="radio-inline">
-        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="false">Wildcard Pattern
+        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Wildcard Pattern
       </label>
     </div>
     <label class="col-md-3 control-label">URL</label>
@@ -51,9 +51,10 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Query String Parameters To Drop/Keep</label>
     <div class="col-sm-9">
-      <ui-select tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="$ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list" id="query_string">
-        <ui-select-match placeholder="Add Query String...">{{$item}}</ui-select-match>
-        <ui-select-choices repeat="query_string in $ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list">
+      <ui-select tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="$ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list" id="domain_aliases2">
+        <ui-select-match placeholder="Add Query String ...">{{$item}}</ui-select-match>
+        <ui-select-choices repeat="query_str in $ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list">
+          {{query_str}}
         </ui-select-choices>
       </ui-select>
     </div>
