--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -90,13 +90,13 @@
             </label>
             <div class="col-md-9">
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="use_end_user_protocol">Use End User Protocol
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="use_end_user_protocol">Use End User Protocol
               </label>
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="https_only">HTTPS Only
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="https_only">HTTPS Only
               </label>
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
               </label>
             </div>
           </div>
@@ -120,7 +120,7 @@
               Wildcard Domain Alias
             </label>
             <div class="col-md-9">
-              <input type="text" class="form-control" ng-model="model.domain_wildcard_alias">
+              <input type="text" class="form-control" ng-disabled="_loading" ng-model="model.domain_wildcard_alias" placeholder="Wildcard Domain Alias">
             </div>
           </div>
           <!-- -->
@@ -130,7 +130,7 @@
               Data Read Timeout
             </label>
             <div class="col-md-9">
-              <input type="number" class="form-control" ng-model="model.proxy_timeout" min="0" max="99999999"> second(s)
+              <input type="number" class="form-control" ng-disabled="_loading" ng-model="model.proxy_timeout" min="0" max="99999999"> second(s)
             </div>
           </div>
           <!-- -->
@@ -140,7 +140,7 @@
               Last Mile QUIC Protocol
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
@@ -150,7 +150,17 @@
               Block All Web Crawlers
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
+              </toggle-switch>
+            </div>
+          </div>
+          <!-- RUM Data Collection  -->
+          <div class="form-group form-inline">
+            <label for="block_crawlers" class="col-sm-3 control-label">
+              RUM Data Collection
+            </label>
+            <div class="col-md-9">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_co.enable_rum" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
@@ -160,7 +170,7 @@
               Edge Caching
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
