--- a/code/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -1,18 +1,19 @@
 <div class="domain-caching-rule ">
   <div class="form-group">
-    <label class="col-md-3 control-label">URL</label>
-    <div class=" col-md-9">
+    <div class="col-md-offset-3  col-md-9">
       <label class="radio-inline">
-        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Regular Expression Only
+        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="false">Regular Expression
       </label>
       <label class="radio-inline">
-        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="false">Wildcard Pattern
+        <input type="radio" ng-model="$ctrl.caching_rule.url.is_wildcard" ng-value="true">Wildcard Pattern
       </label>
     </div>
-    <div class="col-md-offset-3 col-md-9">
+    <label class="col-md-3 control-label">URL</label>
+    <div class="col-md-9">
       <input type="text" class="form-control" ng-model="$ctrl.caching_rule.url.value">
     </div>
   </div>
+  <hr>
   <div class="form-group info">
     <label class="col-sm-3">Edge Caching</label>
   </div>
@@ -43,16 +44,17 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Keep Or Drop Query String Parameters</label>
     <div class="col-sm-9">
-      <toggle-switch ng-model="$ctrl.caching_rule.edge_caching.query_string_list_is_keep" on-label="On" off-label="Off">
+      <toggle-switch ng-model="$ctrl.caching_rule.edge_caching.query_string_list_is_keep" on-label="Keep" off-label="Drop">
       </toggle-switch>
     </div>
   </div>
   <div class="form-group ">
     <label class="col-sm-3 control-label">Query String Parameters To Drop/Keep</label>
     <div class="col-sm-9">
-      <ui-select tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="$ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list" id="query_string">
-        <ui-select-match placeholder="Add Query String...">{{$item}}</ui-select-match>
-        <ui-select-choices repeat="query_string in $ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list">
+      <ui-select tagging tagging-label="Add New Query String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="$ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list" id="domain_aliases2">
+        <ui-select-match placeholder="Add Query String ...">{{$item}}</ui-select-match>
+        <ui-select-choices repeat="query_str in $ctrl.caching_rule.edge_caching.query_string_keep_or_remove_list">
+          {{query_str}}
         </ui-select-choices>
       </ui-select>
     </div>
