--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -90,13 +90,13 @@
             </label>
             <div class="col-md-9">
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="use_end_user_protocol">Use End User Protocol
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="use_end_user_protocol">Use End User Protocol
               </label>
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="https_only">HTTPS Only
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="https_only">HTTPS Only
               </label>
               <label class="radio-inline">
-                <input type="radio" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
+                <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
               </label>
             </div>
           </div>
@@ -115,12 +115,12 @@
           </div>
           <!-- // -->
           <!-- Wildcard Domain Alias -->
-          <div class="form-group form-inline">
+          <div class="form-group">
             <label for="origin_secure_protocol" class="col-sm-3 control-label">
               Wildcard Domain Alias
             </label>
             <div class="col-md-9">
-              <input type="text" class="form-control" ng-model="model.domain_wildcard_alias">
+              <input type="text" class="form-control" ng-disabled="_loading" ng-model="model.domain_wildcard_alias" placeholder="Wildcard Domain Alias">
             </div>
           </div>
           <!-- -->
@@ -130,7 +130,7 @@
               Data Read Timeout
             </label>
             <div class="col-md-9">
-              <input type="number" class="form-control" ng-model="model.proxy_timeout" min="0" max="120"> second(s)
+              <input type="number" class="form-control" ng-disabled="_loading" ng-model="model.proxy_timeout" min="0" max="99999999"> second(s)
             </div>
           </div>
           <!-- -->
@@ -140,7 +140,7 @@
               Last Mile QUIC Protocol
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
@@ -150,7 +150,17 @@
               Block All Web Crawlers
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
+              </toggle-switch>
+            </div>
+          </div>
+          <!-- RUM Data Collection  -->
+          <div class="form-group form-inline">
+            <label for="block_crawlers" class="col-sm-3 control-label">
+              RUM Data Collection
+            </label>
+            <div class="col-md-9">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_co.enable_rum" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
@@ -160,7 +170,7 @@
               Edge Caching
             </label>
             <div class="col-md-9">
-              <toggle-switch ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
+              <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
               </toggle-switch>
             </div>
           </div>
@@ -190,7 +200,7 @@
                 </a>
               </span>
               <span ng-click="onAddNewCachingRule()" class="btn btn-primary btn-sm pull-right" title="Add New Caching Rule"><i class="glyphicon glyphicon-plus"></i></span>
-              <h4>Caching Rules</h4>
+              <h4><b>Caching Rules</b></h4>
             </div>
             <div class="panel-body">
               <!-- TODO: creater directive -->
@@ -207,9 +217,9 @@
                         <i class="glyphicon glyphicon-chevron-down"></i>
                       </a>
                       <!--  Caching Rule Up  -->
-                      <a class="btn btn-default btn-xs" href="" ng-click="onUpCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-up "></i></a>
+                      <a class="btn btn-default btn-xs" href="" ng-click="onUpCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
                       <!--  Caching Rule Down  -->
-                      <a class="btn btn-default btn-xs" href="" ng-click="onDownCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-down"></i></a>
+                      <a class="btn btn-default btn-xs" href="" ng-click="onDownCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
                       <!-- // -->
                     </div>
                     <div class="pull-right panel-button-right">
@@ -221,7 +231,7 @@
                     <div class="panel-title">
                       <i class="icon-revapm-icon-regex" ng-if="!caching_rule.url.is_wildcard"></i>
                       <i class="icon-revapm-files-empty" ng-if="caching_rule.url.is_wildcard"></i>
-                      <b> URL </b>: </i> {{caching_rule.url.value}}
+                      <b>URL</b>: </i> {{caching_rule.url.value}}
                     </div>
                   </div>
                 </div>
