--- a/code/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
+++ b/code/parts/domains/end-user-response-headers/end-user-response-headers.tpl.html
@@ -7,44 +7,45 @@
     </div> -->
     <!-- Table -->
     <table class="table table-headers-info">
-    <thead></thead>
+      <thead></thead>
       <tr>
         <th>Header Name</th>
         <th>Header Value</th>
-        <th>Operation</th>
+        <th class="table-title--operation">Operation</th>
         <th></th>
       </tr>
-    </thead>
+      </thead>
       <tbody>
-      <tr ng-repeat="line in $ctrl.end_user_response_headers">
-        <td>
-          <button class="btn btn-warning btn-xs btn-delete-end_user_response_headers" type="button" ng-click="$ctrl.onDelete($index)">
-            <i class="glyphicon glyphicon-remove"></i>
-          </button>
-          {{line.header_name }}</td>
-        <td>{{line.header_value }} </td>
-        <td>{{line.operation}}</td>
-        <td> </td>
-      </tr>
-      <!-- New line-->
-      <tr ng-form="newLineForm" class="well">
-        <td>
-          <input type="text" name="header_name" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_name" placeholder="New Header Name" required>
-        </td>
-        <td>
-          <input type="text" name="header_value" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_value" placeholder="New Header Value" required>
-        </td>
-        <td>
-          <select class="form-control" ng-model="$ctrl.newEndUserResponseHeader.operation">
-            <option value="add">Add</option>
-            <option value="replace">Replace</option>
-            <option value="remove">Remove</option>
-          </select>
-        </td>
-        <td>
-          <button type="button" class="btn btn-success" ng-disabled="!newLineForm.$valid" ng-click="$ctrl.onAddNew($ctrl.newEndUserResponseHeader)">Add New</button>
-        </td>
-      </tr>
+        <tr ng-repeat="line in $ctrl.end_user_response_headers">
+          <td> {{line.header_name }}</td>
+          <td>{{line.header_value }} </td>
+          <td>{{line.operation}}</td>
+          <td>
+            <button class="btn btn-warning btn-xs btn-delete-end_user_response_headers" type="button" ng-click="$ctrl.onDelete($index)" title="Delete Header">
+              <i class="glyphicon glyphicon-remove"> Delete</i>
+            </button>
+          </td>
+        </tr>
+        <!-- New line-->
+        <tr ng-form="newLineForm" class="well">
+          <td>
+            <input type="text" name="header_name" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_name" placeholder="New Header Name" required>
+          </td>
+          <td>
+            <input type="text" name="header_value" class="form-control" ng-model="$ctrl.newEndUserResponseHeader.header_value" placeholder="New Header Value" required>
+          </td>
+          <td>
+            <select class="form-control" ng-model="$ctrl.newEndUserResponseHeader.operation">
+              <option value="add">Add</option>
+              <option value="replace">Replace</option>
+              <option value="remove">Remove</option>
+            </select>
+          </td>
+          <td>
+            <button type="button" class="btn btn-success" ng-disabled="!newLineForm.$valid" ng-click="$ctrl.onAddNew($ctrl.newEndUserResponseHeader)" title="Add New Header">
+              <i class="glyphicon glyphicon-plus"></i> Add New</button>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
